Добавляю мета-тег для яндекс-вебмастера

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="yandex-verification" content="5a1cf69a7c415484" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
       rel="apple-touch-icon"
